--- a/00Pratice/01Basci/02dict_set.ipynb
+++ b/00Pratice/01Basci/02dict_set.ipynb
@@ -253,15 +253,18 @@
    "source": [
     "# 查找某件商品ID的价格\n",
     "# 使用列表实现 时间复杂度O(n),即使使用二分查找也要O(logn),更何况排序也要O(logn)\n",
-    "products=[(143131231,100),(342342342,30),(12414341322,150)]\n",
+    "products = [(143131231, 100), (342342342, 30), (12414341322, 150)]\n",
     "\n",
-    "def find_product_price(products,product_id):\n",
-    "    for id,price in products:\n",
+    "\n",
+    "def find_product_price(products, product_id):\n",
+    "    for id, price in products:\n",
     "        if id == product_id:\n",
     "            return price\n",
     "    return None\n",
     "\n",
-    "print('The price of product 342342342 is {} '.format(find_product_price(products,342342342)))"
+    "\n",
+    "print('The price of product 342342342 is {} '.format(\n",
+    "    find_product_price(products, 342342342)))\n"
    ]
   },
   {
@@ -279,9 +282,79 @@
    ],
    "source": [
     "# 使用字典实现 时间复杂度O(1)\n",
-    "products={143131231:100,342342342:30,12414341322:150}\n",
+    "products = {143131231: 100, 342342342: 30, 12414341322: 150}\n",
     "\n",
-    "print('The price of product 342342342 is {} '.format(products.get(342342342,None)))"
+    "print('The price of product 342342342 is {} '.format(\n",
+    "    products.get(342342342, None)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of unique price is 3 \n",
+      "number of unique price is 3 \n",
+      "time elapse using list:47.53516889999446 \n",
+      "time elapse using set:0.008260999995400198 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 找出这些商品有多少不同价格\n",
+    "import time\n",
+    "products = [(143131231, 100), (342342342, 30),\n",
+    "            (12414341322, 150), (24324242342, 30)]\n",
+    "# 使用列表实现 时间复杂度O(n^2)\n",
+    "\n",
+    "\n",
+    "def find_unique_price_list(products):\n",
+    "    unique_price_list = []\n",
+    "    for _, price in products:\n",
+    "        if price not in unique_price_list:\n",
+    "            unique_price_list.append(price)\n",
+    "    return len(unique_price_list)\n",
+    "\n",
+    "\n",
+    "print('number of unique price is {} '.format(find_unique_price_list(products)))\n",
+    "\n",
+    "# 使用集合实现 集合里的元素不能重复,且添加的时间复杂度O(1)\n",
+    "\n",
+    "\n",
+    "def find_unique_price_set(products):  # 总时间复杂度O(n)\n",
+    "    unique_price_set = set()\n",
+    "    for _, price in products:\n",
+    "        unique_price_set.add(price)\n",
+    "    return len(unique_price_set)\n",
+    "\n",
+    "\n",
+    "print('number of unique price is {} '.format(find_unique_price_set(products)))\n",
+    "\n",
+    "# 增大数据量来看差异\n",
+    "id = [x for x in range(100000)]\n",
+    "price = [x for x in range(100000)]\n",
+    "products = list(zip(id, price))\n",
+    "\n",
+    "start_using_list = time.perf_counter()\n",
+    "find_unique_price_list(products)\n",
+    "end_using_list = time.perf_counter()\n",
+    "print(\"time elapse using list:{} \".format(end_using_list-start_using_list))\n",
+    "\n",
+    "start_using_set = time.perf_counter()\n",
+    "find_unique_price_set(products)\n",
+    "end_using_set = time.perf_counter()\n",
+    "print(\"time elapse using set:{} \".format(end_using_set-start_using_set))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "集合和字典的工作原理"
    ]
   },
   {
@@ -290,18 +363,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 找出这些商品有多少不同价格\n",
-    "products=[(143131231,100),(342342342,30),(12414341322,150),(24324242342,30)]\n",
-    "# 使用列表实现 时间复杂度O(n^2)\n",
-    "def find_unique_price_list(products):\n",
-    "    unique_price_list=[]\n",
-    "    for _, price in products:\n",
-    "        if price not in unique_price_list:\n",
-    "            unique_price_list.append(price)\n",
-    "    return len(unique_price_list)\n",
+    "# 老版本的字典数据结构\n",
+    "dic = {'name': 'mike', 'dob': '1999-01-01', 'gender': 'male'}\n",
+    "# 存储成下面的类似形式\n",
+    "entires = [\n",
+    "    ['--', '--', '--'],\n",
+    "    [-230273521, 'dob', '1999-01-01'],\n",
+    "    ['--', '--', '--'],\n",
+    "    ['--', '--', '--'],\n",
+    "    [1231236123, 'name', 'mike'],\n",
+    "    ['--', '--', '--'],\n",
+    "    [9371539127, 'gender', 'male']\n",
+    "]\n",
     "\n",
-    "\n",
-    "print('number of unique price is {} '.format(find_unique_price_list(products)))"
+    "# 新版本的会存储成下面的形式\n",
+    "indices = [None, 1, None, None, 0, None, 2]\n",
+    "entries = [\n",
+    "    [1231236123, 'name', 'mike'],\n",
+    "    [-230273521, 'dob', '1999-01-01'],\n",
+    "    [9371539127, 'gender', 'male']\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": ""
+    }
+   },
+   "source": [
+    "<img style=\"float: right;\" src=\"../../image/00/insert.png\">\n",
+    "<img style=\"float: right;\" src=\"../../image/00/deleter_update.png\">"
    ]
   }
  ],
