--- a/00Pratice/01Basci/03str.ipynb
+++ b/00Pratice/01Basci/03str.ipynb
@@ -125,9 +125,129 @@
     "\n",
     "# 另外，对于字符串拼接问题，还可以使用字符串内置的join函数。string.join(iterable)\n",
     "l = []\n",
-    "for n in range(100000): # O(n)\n",
+    "for n in range(100000):  # O(n)\n",
     "    l.append(str(n))\n",
     "l = ' '.join(l)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "字符分割函数string.split(separator),表示把字符串按照separator分割成子字符串，并返回一个分割后的子字符串组合的列表。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ads\n",
+      "traing_table\n"
+     ]
+    }
+   ],
+   "source": [
+    "def query_data(namespace, table):\n",
+    "    '''given namespace and table,query database to get corresponding data'''\n",
+    "\n",
+    "\n",
+    "path = 'hive://ads/traing_table'\n",
+    "namespace = path.split('//')[1].split('/')[0]\n",
+    "print(namespace)\n",
+    "table = path.split('//')[1].split('/')[1]\n",
+    "print(table)\n",
+    "data = query_data(namespace, table)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strip()函数，string.find(sub,start,end)，表示从start到end查找字符串中子字符串sub的位置等等。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is jason\n",
+      "my name is jason \n",
+      " my name is jason\n",
+      "1\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = ' my name is jason '\n",
+    "print(s.strip())\n",
+    "print(s.lstrip())\n",
+    "print(s.rstrip())\n",
+    "\n",
+    "print(s.find('m'))\n",
+    "print(s.find('m', 4, 10))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "字符串的格式化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "我的名字叫张三,今年18岁了\n",
+      "我的名字叫张三,今年18岁了,我真的叫张三\n",
+      "我的名字叫张三,今年18岁了\n",
+      "        99\n",
+      "99        \n",
+      "3.142\n",
+      "     3.142\n",
+      "growth rate: 7 %\n",
+      "3.14\n",
+      "3.142\n",
+      "     3.142\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1.使用%占位符\n",
+    "name = '张三'\n",
+    "age = 18\n",
+    "print('我的名字叫%s,今年%d岁了' % (name, age))\n",
+    "# 2.使用{}占位符\n",
+    "print(\"我的名字叫{0},今年{1}岁了,我真的叫{0}\".format(name, age))\n",
+    "# 3.f-string\n",
+    "print(f'我的名字叫{name},今年{age}岁了')\n",
+    "\n",
+    "print('%10d' % 99)  # 10表示的是总共宽度,右对齐\n",
+    "print('%-10d' % 99)  # 左对齐\n",
+    "print('%.3f' % 3.1415926)  # .3表示的是小数点后三位\n",
+    "print('%10.3f' % 3.1415926)  # 同时表示精度和宽度\n",
+    "\n",
+    "print('growth rate: %d %%' % 7)  # 用%%来表示一个%\n",
+    "\n",
+    "print('{0:.3}'.format(3.1415926))  # 3.14\n",
+    "print('{0:.3f}'.format(3.1415926))  # 3.142\n",
+    "print('{0:10.3f}'.format(3.1415926))  # 同时表示精度和宽度\n"
    ]
   }
  ],
