--- a/00Pratice/01Basci/07oppI.ipynb
+++ b/00Pratice/01Basci/07oppI.ipynb
@@ -41,26 +41,28 @@
    ],
    "source": [
     "class Document():\n",
-    "    def __init__(self,title,author,context):\n",
+    "    def __init__(self, title, author, context):\n",
     "        print('init funciton called')\n",
-    "        self.title=title\n",
-    "        self.author=author\n",
-    "        self.__context=context # __开头为私有属性\n",
-    "    \n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "        self.__context = context  # __开头为私有属性\n",
+    "\n",
     "    def get_context_length(self):\n",
     "        return len(self.__context)\n",
-    "    \n",
-    "    def intercept_context(self,length):\n",
-    "        self.__context=self.__context[:length]\n",
-    "    \n",
-    "harry_potter_book=Document('Harry Potter','J.K.Rowing','... Forever Do not believe any thing is capable of thinking indepent...')\n",
+    "\n",
+    "    def intercept_context(self, length):\n",
+    "        self.__context = self.__context[:length]\n",
+    "\n",
+    "\n",
+    "harry_potter_book = Document('Harry Potter', 'J.K.Rowing',\n",
+    "                             '... Forever Do not believe any thing is capable of thinking indepent...')\n",
     "print(harry_potter_book.title)\n",
     "print(harry_potter_book.author)\n",
     "print(harry_potter_book.get_context_length())\n",
     "harry_potter_book.intercept_context(10)\n",
     "print(harry_potter_book.get_context_length())\n",
     "\n",
-    "print(harry_potter_book.__context)"
+    "print(harry_potter_book.__context)\n"
    ]
   },
   {
@@ -89,18 +91,18 @@
    ],
    "source": [
     "class Document():\n",
-    "    WELCOME_STR='Welcome! The context for this book is {}'\n",
+    "    WELCOME_STR = 'Welcome! The context for this book is {}'\n",
     "\n",
-    "    def __init__(self,title,author,context):\n",
+    "    def __init__(self, title, author, context):\n",
     "        print('init funciton called')\n",
-    "        self.title=title\n",
-    "        self.author=author\n",
-    "        self.__context=context # __开头为私有属性\n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "        self.__context = context  # __开头为私有属性\n",
     "\n",
     "    # 类函数\n",
     "    @classmethod\n",
-    "    def get_empty_book(cls,title,author):\n",
-    "        return cls(title,author,context='')\n",
+    "    def get_empty_book(cls, title, author):\n",
+    "        return cls(title, author, context='')\n",
     "\n",
     "    # 静态函数\n",
     "    @staticmethod\n",
@@ -111,9 +113,224 @@
     "    def get_context_length(self):\n",
     "        return len(self.__context)\n",
     "\n",
-    "empty_book=Document.get_empty_book('empty book','Yi Ming')\n",
+    "\n",
+    "empty_book = Document.get_empty_book('empty book', 'Yi Ming')\n",
     "print(empty_book.get_context_length())\n",
-    "print(empty_book.get_welcome('indeed nothing'))"
+    "print(empty_book.get_welcome('indeed nothing'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "继承"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document class init called\n",
+      "parent class init called\n",
+      "Video class init called\n",
+      "parent class init called\n",
+      "document\n",
+      "video\n",
+      "Haryy Potter(Book)\n",
+      "Harry Potter(Movie)\n",
+      "58\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Entity():\n",
+    "    def __init__(self, object_type):\n",
+    "        print('parent class init called')\n",
+    "        self.object_type = object_type\n",
+    "\n",
+    "    def get_context_length(self):\n",
+    "        raise Exception('get_context_length not implemented')\n",
+    "\n",
+    "    def print_title(self):\n",
+    "        print(self.title)\n",
+    "\n",
+    "\n",
+    "class Document(Entity):\n",
+    "    def __init__(self, title, author, context):\n",
+    "        print('Document class init called')\n",
+    "        Entity.__init__(self, 'document')\n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "        self.__context = context\n",
+    "\n",
+    "    def get_context_length(self):\n",
+    "        return len(self.__context)\n",
+    "\n",
+    "\n",
+    "class Video(Entity):\n",
+    "    def __init__(self, title, author, video_length):\n",
+    "        print('Video class init called')\n",
+    "        Entity.__init__(self, 'video')\n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "        self.__video_length = video_length\n",
+    "\n",
+    "    def get_context_length(self):\n",
+    "        return self.__video_length\n",
+    "\n",
+    "\n",
+    "harry_potter_book = Document('Haryy Potter(Book)', 'J.K.Rowing',\n",
+    "                             '...Forever Do not believe any thing is capable of thinking')\n",
+    "harry_potter_movie = Video('Harry Potter(Movie)', 'J.K.Rowing', 120)\n",
+    "\n",
+    "print(harry_potter_book.object_type)\n",
+    "print(harry_potter_movie.object_type)\n",
+    "\n",
+    "harry_potter_book.print_title()\n",
+    "harry_potter_movie.print_title()\n",
+    "\n",
+    "\n",
+    "print(harry_potter_book.get_context_length())\n",
+    "print(harry_potter_movie.get_context_length())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "抽象类"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harry Potter\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Can't instantiate abstract class Entity with abstract methods get_title, set_title",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_125572/425445010.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_title\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[0me\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mEntity\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: Can't instantiate abstract class Entity with abstract methods get_title, set_title"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABCMeta, abstractmethod\n",
+    "\n",
+    "\n",
+    "class Entity(metaclass=ABCMeta):\n",
+    "    @abstractmethod\n",
+    "    def get_title(self):\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def set_title(self, title):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "class Document(Entity):\n",
+    "    def get_title(self):\n",
+    "        return self.title\n",
+    "\n",
+    "    def set_title(self, title):\n",
+    "        self.title = title\n",
+    "\n",
+    "\n",
+    "d = Document()\n",
+    "d.set_title('Harry Potter')\n",
+    "print(d.get_title())\n",
+    "\n",
+    "e = Entity()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "多重继承中存在菱形继承潜在的问题：一个基类的初始化函数可能被调用两次。\n",
+    "- 使用super来召唤父类的构造函数来解决。（C3算法来保证一个类只会被初始化一次）\n",
+    "\n",
+    "--->B---\n",
+    "A-     -->D\n",
+    "--->C---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter D\n",
+      "enter c\n",
+      "enter B\n",
+      "enter A\n",
+      "leave A\n",
+      "leave B\n",
+      "leave c\n",
+      "leave D\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.D at 0x19f8bf9ef10>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class A():\n",
+    "    def __init__(self):\n",
+    "        print('enter A')\n",
+    "        print('leave A')\n",
+    "\n",
+    "\n",
+    "class B(A):\n",
+    "    def __init__(self):\n",
+    "        print('enter B')\n",
+    "        super().__init__()\n",
+    "        print('leave B')\n",
+    "\n",
+    "\n",
+    "class C(A):\n",
+    "    def __init__(self):\n",
+    "        print('enter c')\n",
+    "        super().__init__()\n",
+    "        print('leave c')\n",
+    "\n",
+    "\n",
+    "class D(C, B):\n",
+    "    def __init__(self):\n",
+    "        print('enter D')\n",
+    "        super().__init__()\n",
+    "        print('leave D')\n",
+    "\n",
+    "\n",
+    "D()\n"
    ]
   }
  ],
