--- a/00Pratice/02advanced/01decorator.ipynb
+++ b/00Pratice/02advanced/01decorator.ipynb
@@ -100,11 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got a message: hello world\n"
+     ]
+    }
+   ],
    "source": [
-    "def func_closure(message):\n",
+    "def func_closure():\n",
     "    def get_message(message):\n",
     "        print('Got a message: {}'.format(message))\n",
     "    return get_message\n",
@@ -112,11 +120,125 @@
     "send_message=func_closure()\n",
     "send_message('hello world')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "简单装饰器"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warpper of decorator\n",
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_decorator(func):\n",
+    "    def wrapper():\n",
+    "        print('warpper of decorator')\n",
+    "        func()\n",
+    "    return wrapper\n",
+    "\n",
+    "def greet():\n",
+    "    print('hello world')\n",
+    "\n",
+    "greet=my_decorator(greet)\n",
+    "greet()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warpper of decorator\n",
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 简洁写法\n",
+    "def my_decorator(func):\n",
+    "    def wrapper():\n",
+    "        print('warpper of decorator')\n",
+    "        func()\n",
+    "    return wrapper\n",
+    "\n",
+    "@my_decorator\n",
+    "def greet():\n",
+    "    print('hello world')\n",
+    "\n",
+    "greet()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "带有参数的装饰器"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warpper of decorator\n",
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_decorator(func):\n",
+    "    def wrapper(message):\n",
+    "        print('warpper of decorator')\n",
+    "        func(message)\n",
+    "    return wrapper\n",
+    "\n",
+    "@my_decorator\n",
+    "def greet(message):\n",
+    "    print(message)\n",
+    "\n",
+    "greet('hello world')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如果有两个"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.13 ('study')",
    "language": "python",
    "name": "python3"
   },
@@ -130,12 +252,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e42634819b8c191a5d07eaf23810ff32516dd8d3875f28ec3e488928fbd3c187"
+    "hash": "46cb6235441a8b74df724a68ed242e7b6759bfc907d92e7c8b163c38b1b4592e"
    }
   }
  },
