--- a/04ds/02linked_list.ipynb
+++ b/04ds/02linked_list.ipynb
@@ -13,14 +13,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "循环链表和双向链表。<br>\n",
     "最简单、最常用的单链表"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "循环链表和双向链表。"
+    "class Node():\n",
+    "    \"\"\"链表结构的Node节点\"\"\"\n",
+    "    def __init__(self, data,next_node=None):\n",
+    "        self.__data=data\n",
+    "        self.__next=next_node\n",
+    "    \n",
+    "    @property\n",
+    "    def data(self):\n",
+    "        return self.__data\n",
+    "    \n",
+    "    @data.setter\n",
+    "    def data(self,data):\n",
+    "        self.__data=data\n",
+    "    \n",
+    "    @property\n",
+    "    def next_node(self):\n",
+    "        return self.__next\n",
+    "    \n",
+    "    @next_node.setter\n",
+    "    def next_node(self,node):\n",
+    "        self.__next=node\n",
+    "    \n",
+    "class SingelyLinkedList():\n",
+    "    \"\"\"单向链表\"\"\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        \"\"\"单向列表的初始化方法.\"\"\"\n",
+    "        self.__head=None\n",
+    "    \n",
+    "    def find_by_value(self,value):\n",
+    "        \"\"\"按照数据值在单向列表中查找.\n",
+    "        参数:\n",
+    "            value:查找的数据\n",
+    "        返回:\n",
+    "            Node\n",
+    "        \"\"\"\n",
+    "        current=self.__head\n",
+    "        while not current:\n",
+    "            if current.data==value:\n",
+    "                return current\n",
+    "            else:\n",
+    "                current=current.next_node\n",
+    "        return None\n",
+    "\n"
    ]
   }
  ],
